Fixed huge height on Mobile

--- a/src/styling/06_components/content/_c-content.scss
+++ b/src/styling/06_components/content/_c-content.scss
@@ -39,7 +39,7 @@
 
         @media (max-width: $grid-lg) {
             width: 100%;
-            height: 100vh;
+            height: 60vh;
         }
 
         & .content__imagelayout {
@@ -62,7 +62,7 @@
 
         @media (max-width: $grid-lg) {
             width: 100%;
-            height: 100vh;
+            height: 60vh;
         }
     }
 
